Updated pages to all look the same

--- a/Create a profile/Flat Finder/index.html
+++ b/Create a profile/Flat Finder/index.html
@@ -4,7 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Flatfinder - Create your account! </title>
+<title>Flat Me A Flat - Create your account! </title>
 
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="css/style.css">
